--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.1",
+    "pillow>=11.3.0",
     "py-cord>=2.6.1",
     "python-dotenv>=1.1.1",
     "readme-md>=2018.11.23",
