--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ dependencies = [
     "flask>=3.1.2",
     "flask-sqlalchemy>=3.1.1",
     "flask-migrate>=4.0.5",
-    "flask-dance[sqlalchemy]>=7.1.0",
     "requests-oauthlib>=1.3.1",
     "oauthlib>=3.2.2",
     "flask-login>=0.6.3",
     "python-dotenv>=1.1.1",
+    "flask-dance[sqla]>=7.1.0",
 ]
