--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,10 @@ dependencies = [
     "flask-login>=0.6.3",
     "python-dotenv>=1.1.1",
     "flask-dance[sqla]>=7.1.0",
+    "boto3>=1.42.3",
+    "google-api-python-client>=2.187.0",
+    "google-auth>=2.43.0",
+    "google-auth-oauthlib>=1.2.2",
+    "werkzeug>=3.1.3",
+    "pillow>=12.0.0",
 ]
